sites/all/themes/heybabies/sass/_forms.scss
.form-type-textfield,
.form-type-password,
.edit-account .form-type-select
{
    border-bottom: 1px solid $seafoam;
    overflow: hidden;
    
    label
    {
        float: left;
        width: 33.333%;
        color: $seafoam;
        line-height: 2;
        margin-right: -2px;
        font-weight: 500;
        text-align: left;
    }
    input
    {
        display: block;
        width: 63.666%;
        padding: 0 1.5%;
        border: 0;
        background: none;
        color: #333;
        outline-color: $seafoam;
        font-weight: 400;
        font-size: 1em;
        line-height: 2;
        margin: 0;
        
        &.error
        {
            border-width: 1px;
        }
    }
}

.form-required
{
    display: none;
}

.form-actions input
{
    display: inline-block;
    min-width: 120px;
    padding: 0 20px;
    text-align: center;
    background: $seafoam;
    border-radius: 4px;
    -webkit-apperance: none;
    text-decoration: none;
    cursor: pointer;
    color: white;
    font-weight: 500;
    border: 0;
    font-size: 1em;
    line-height: 40px;
    outline-color: $seafoam;
    
    &:hover
    {
        background: #8ac5ab;
    }
}

#user-profile-form
{
    overflow: hidden;
    
    .edit-account,
    .form-actions
    {
        max-width: 400px;
        float: left;
        margin-right: 80px;
        
        .form-actions
        {
            text-align: center;
        }
        label
        {
            text-transform: lowercase;
        }
    }
    .form-actions
    {
        clear: left;
    }
    .form-submit
    {
        text-transform: lowercase;
        margin: 0 auto;
        width: 100%;
        padding: 0;
        display: block;
    }
    
    .view-commerce-addressbook
    {
        overflow: hidden;
    }
}

#user-login,
#user-register-form,
#user-pass
{
    max-width: 400px;
    margin: 0 auto;
    
    label
    {
        text-transform: lowercase;
    }
    .description
    {
        display: none;
    }
    .form-submit
    {
        text-transform: lowercase;
        margin: 0 auto;
        width: 100%;
        padding: 0;
        display: block;
    }
}
#user-pass
{
    label
    {
        width: 40.333%;
    }
    input
    {
        width: 56.666%;
    }
}
.login-form
{
    float: left;
    
    .form-actions
    {
        margin-bottom: 0;
    }
    .form-item-remember-me
    {
        color: $seafoam;
        float: left;
    }
    .forgot-pass
    {
        float: right;
        text-align: right;
    }
}
.register-form
{
    float: right;
}
.toboggan-unified
{
    overflow: hidden;
}

